# puddle-mcp

./: .gitignore  README.md  pyproject.toml  server.py
puddle_server/: __init__.py  mcp.py  prompts.py  utils.py
puddle_server/tools/: context_tools.py  query_tool.py
